# cuckoo3

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cert-ee  LICENSE  README.md  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-.md  documentation.md  feature_request.md  improvement.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
INSTALL/: QUICKSTART.md
common/: pyproject.toml  setup.cfg  setup.py
common/cuckoo/common/: analyses.py  clients.py  compare.py  config.py  db.py  dns.py  elastic.py  errors.py  guest.py  importing.py  intelmq.py  ipc.py  log.py  machines.py  migrate.py  misp.py  netcapture.py  node.py  packages.py  result.py  resultstats.py  route.py  safelist.py  shutdown.py  startup.py  storage.py  strictcontainer.py  submit.py  targets.py  task.py  taskflow.py  utils.py  virustotal.py
common/cuckoo/common/data/: cwdmigrate.txt
common/cuckoo/common/data/cwd/elasticsearch/: analysesmapping.json  eventsmapping.json  tasksmapping.json
common/cuckoo/common/data/dbmigrations/cuckoodb/: alembic.ini  env.py
common/cuckoo/common/data/dbmigrations/safelistdb/: alembic.ini  env.py
core/: README.rst  pyproject.toml  setup.cfg  setup.py
core/cuckoo/: __init__.py  analyses.py  analysis.py  clean.py  config.py  control.py  controller.py  db.py  instance.py  ipc.py  machinery.py  main.py  nodeclient.py  resultserver.py  retriever.py  runprocessing.py  scheduler.py  scheduler2.py  shutdown.py  started.py  startup.py  storage.py  submit.py  task.py  taskflow.py  taskqueue.py  taskrunner.py
core/cuckoo/data/conftemplates/: analysissettings.yaml.jinja2  cuckoo.yaml.jinja2  distributed.yaml.jinja2  reporting.yaml.jinja2  routing.yaml.jinja2
core/cuckoo/data/dbmigrations/taskqueuedb/: alembic.ini  env.py
core/cuckoo/scripts/: cleanup.py  migrate.py  safelist.py
devtools/: updatecwdhashes.py
docs/: mkdocs.yml  requirements.txt
docs/rfc/: cuckoo.md  machinerymanager.md  packages.md  patternsigs.md  processing.md  submission.md  workerhandler.md
docs/src/: extra.css  index.md  style.css
docs/src/about/: cuckoo.md  dependencies.md  sandboxing.md  terminology.md
docs/src/configuration/: cuckoo.md  review_machineries.md  routing.md  system.md  vmcloak.md
docs/src/configuring/: cuckoo.md  routing.md  system.md  vmcloak.md  web-api.md  web-ui.md
docs/src/creating/: machinery.md  vms.md
docs/src/development/: creating_machinery.md
docs/src/faq/: common.md
docs/src/fonts/: OFL.txt
docs/src/installation/: cuckoo.md  dependencies.md  deps.md  machineries.md  overview.md  quickstart.md  routing.md  vmcloak.md  vmcreation.md
docs/src/installing/: cuckoo.md  dependencies.md  overview.md  quickstart.md  vmcloak.md
docs/src/introduction/: cuckoo.md  sandboxing.md
docs/src/usage/: commands.md
docs/src/using/: cli-api.md  commands.md  (+4 more)
docsrfc/rfc/: control.md  machinery.md  packages.md  shutdown.md  startup.md  submission.md
machineries/: pyproject.toml  setup.cfg  setup.py
machineries/cuckoo/machineries/: __init__.py  abstracts.py  config.py  configtools.py  confmigrations.py  errors.py  helpers.py
machineries/cuckoo/machineries/data/conftemplates/: kvm.yaml.jinja2  proxmox.yaml.jinja2  qemu.yaml.jinja2
machineries/cuckoo/machineries/modules/: libvirt.py  proxmox.py  qemu.py
node/: MANIFEST.in  pyproject.toml  setup.cfg  setup.py
node/cuckoo/node/: __init__.py  config.py  control.py  machinery.py  main.py  node.py  resultserver.py  startup.py  taskflow.py  taskrunner.py  webapi.py
node/cuckoo/node/data/: cwdmigrate.txt
node/cuckoo/node/data/conftemplates/: routing.yaml.jinja2
node/cuckoo/node/data/cwd/rooter/scripts/: openvpnroutes.sh
node/cuckoo/node/rooter/: errors.py  rooter.py  undoable.py  vpn.py
node/cuckoo/node/scripts/: rooter.py
processing/: README.rst  pyproject.toml  setup.cfg  setup.py
processing/cuckoo/processing/: __init__.py  abtracts.py  config.py  errors.py  family.py  helpers.py  proccessingtool.py  tag.py  ttp.py  typehelpers.py  worker.py
processing/cuckoo/processing/cfgextr/: cfgextr.py  emotet.py
processing/cuckoo/processing/data/: cwdmigrate.txt
processing/cuckoo/processing/data/conftemplates/: elasticsearch.yaml.jinja2  identification.yaml.jinja2  intelmq.yaml.jinja2  irma.yaml.jinja2  mhr.yaml.jinja2  misp.yaml.jinja2  post.yaml.jinja2  snort.yaml.jinja2  suricata.yaml.jinja2  virustotal.yaml.jinja2
processing/cuckoo/processing/data/cwd/signatures/mitreattack/: attack.json
processing/cuckoo/processing/data/cwd/signatures/peutils/: userdb.txt
processing/cuckoo/processing/event/: events.py  filetools.py  processtools.py  reader.py  registrytools.py
processing/cuckoo/processing/event/translate/threemon/: __init__.py  autogen_pb2.py  debug_pb2.py  file_pb2.py  inject_pb2.py  mutant_pb2.py  network_pb2.py  notification_pb2.py  process_pb2.py  reader.py  registry_pb2.py  suspicious_pb2.py  thread_pb2.py  vminfo_pb2.py  whois_pb2.py
processing/cuckoo/processing/identification/: ignore.py  selection.py
processing/cuckoo/processing/post/: cfgextr.py  intelmq.py  misp.py  network.py  networkids.py  screenshot.py
processing/cuckoo/processing/post/eventconsumer/: __init__.py  eventlogs.py  injection.py  patternsigs.py  suspicious.py
processing/cuckoo/processing/pre/: intelmq.py  irma.py  launchargs.py  mhr.py  misp.py  prepare.py  snort.py  static.py  virustotal.py  yara.py
processing/cuckoo/processing/reporting/: disk.py  elastic.py  event.py  intelmq.py  misp.py
processing/cuckoo/processing/scripts/: proccessingtool.py  signaturecompile.py
processing/cuckoo/processing/signatures/: pattern.py  signature.py  yarasigs.py
processing/cuckoo/processing/stage/: post.py
processing/cuckoo/processing/static/: office.py  pe.py
processing/cuckoo/processing/translate/: events.py
processing/cuckoo/processing/translate/threemon/: autogen_pb2.py  debug_pb2.py  file_pb2.py  inject_pb2.py  mutant_pb2.py  notification_pb2.py  reader.py  thread_pb2.py  whois_pb2.py
web/: pyproject.toml  setup.cfg  setup.py
(+231 files in other folders)
