[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Cuckoo"
dynamic = ["version"]
description = "Automated Malware Analysis System"
license = "EUPL-1.2"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Cuckoo-common>=0.1.1",
    "Cuckoo-processing>=0.1.1",
    "Cuckoo-machineries>=0.1.0",
    "Cuckoo-web>=0.1.2",
    "sqlalchemy==2.0.37",
    "sflock>=1.1.0",
    "tabulate>=0.8, <0.10"
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Flask",
    "Framework :: Pytest",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
]

[project.scripts]
cuckoo = "cuckoo.main:main"
cuckoosafelist = "cuckoo.scripts.safelist:main"
cuckoocleanup = "cuckoo.scripts.cleanup:main"
cuckoomigrate = "cuckoo.scripts.migrate:main"

[project.urls]
Homepage = "https://cuckoo-hatch.cert.ee"
Documentation = "https://cuckoo-hatch.cert.ee/static/docs/"
Repository = "https://github.com/cert-ee/cuckoo3"

[tool.hatch.version]
path = "cuckoo/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/cuckoo"]
exclude = [
    "*.pyc",
    "*.pyo"
]

[tool.hatch.build.targets.wheel]
packages = ["cuckoo"]
